# torrentor-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
tests/: __init__.py  test_cli.py  test_config.py  test_engine.py  test_postprocess.py  test_validators.py
torrentor/: __init__.py  __main__.py  cli.py
torrentor/core/: __init__.py  config.py  engine.py  postprocess.py  validators.py
torrentor/models/: __init__.py  torrent.py
torrentor/ui/: __init__.py  banner.py  effects.py  panels.py  progress.py  prompts.py  theme.py
